--- a/frontend/estoquefront/package.json
+++ b/frontend/estoquefront/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -39,5 +40,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/styled-components": "^5.1.26",
+    "axios": "^1.3.4",
+    "jsonwebtoken": "^9.0.0",
+    "styled-components": "^5.3.6"
   }
 }
