--- a/frontend/estoquefront/package.json
+++ b/frontend/estoquefront/package.json
@@ -44,9 +44,11 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/moment": "^2.13.0",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.3.4",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "styled-components": "^5.3.6"
   }
 }
